--- a/less/index.less
+++ b/less/index.less
@@ -152,7 +152,7 @@
                 overflow: hidden;
                 background-color: rgb(228, 192, 165);
                 &:hover{
-                    transform:scale(1.05);
+                    transform:translateX(-20px);
                     box-shadow: -5px 5px 5px #999;
                     transition-duration: 0.8s;
                 }
@@ -166,47 +166,78 @@
         }
     }
 }
-#comments{
-    float: left;
-    
-    margin-top: 20px;
-    width: 100%;
-    .submitcomment{
+
+#Jsarticles, #H5C3articles{
+    margin-left:60px;
+    margin-right:60px;
+    ul{
+       
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        li{
+            height:380px;
+            
+            // border: 1px solid #000;
+            width: 19%;
+
+ 
+    a{
+        display: block;
         width: 100%;
-        height: 100px;
-        textarea{
-            display: block;
-            margin: 0 auto;
-            width: 90%;
-            height: 100px;
-        }
-        button{
-           display: block;
-            margin: 0 auto;
-           
-           
-        }
-    }
-    .commentlist{
-        float: left;
-        width: 100%;
-        padding: 20px;
-        margin-top: 30px;
-        .commentstyle{
-            height: 100px;
-            overflow-y: auto;
-            border-bottom: 1px solid rgba(92,92,92,0.3);
-            .comment_content{
-                margin-top: 10px;
-                color: black;
-                font-size: 14px;
+        height: 100%;
+        .flip-container{
+            width: 100%;
+            height: 100%;
+            perspective: 1000;
+            &:hover .flipper{
+                transform: rotateY(180deg);
             }
-            .userandTme{
-                margin-top: 30px;
-                color: #0094ff;
-                display: flex;
-                justify-content: space-between;
+            .flipper{
+                width: 100%;
+                height: 100%;
+                transition: 0.6s;
+                transform-style: preserve-3d;
+                position: relative;
+                .front, .back{
+                    backface-visibility: hidden;
+                      position: absolute;
+                      top: 0;
+                      left: 0;
+                      width: 100%;
+                      height:100%;
+                      background-color: #fff;
+                      font-size: 14px;
+                      color: #000;
+                      img{
+                          width: 100%;
+                          height:60%;
+                      }
+                      
+
+                      
+                      .articletitle{
+                          width: 100%;
+                          height:152px;
+                          background-color:#fff;
+                          padding-top: 20px;
+                          padding-left: 10px;
+                          color: #000;
+                     
+                       
+
+                      }
+
+                }
+                .front{
+                    z-index: 2;
+                }
+                .back{
+                    transform: rotateY(180deg);
+                }
             }
-        }
+        } 
     }
+}
+}
 }
